2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py:
	  Do not include gaupol.test in packages to install.

2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/dialogs/multiclose.py:
	* lib/gaupol/gtk/dialogs/preferences.py:
	  Added or fixed testing.

2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/language-dialog.glade:
	  Made dialog invisible.

	* lib/gaupol/gtk/dialogs/header.py:
	* lib/gaupol/gtk/dialogs/insertsub.py:
	* lib/gaupol/gtk/dialogs/language.py:
	* lib/gaupol/gtk/dialogs/message.py:
	* lib/gaupol/gtk/dialogs/textedit.py:
	  Added or fixed testing.

2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/test/__init__.py:
	  Moved project import to "get_project" method to avoid circular
	  import-loops.

2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/action.py:
	* lib/gaupol/base/delegates/edit.py:
	* lib/gaupol/base/files/mpl2.py:
	* lib/gaupol/base/tags/mpl2.py:
	* lib/gaupol/gtk/delegates/fileopen.py:
	* lib/gaupol/gtk/delegates/menuupdate.py:
	* lib/gaupol/gtk/dialogs/filechooser.py:
	* lib/gaupol/gtk/dialogs/preferences.py:
	* lib/gaupol/gtk/dialogs/spellcheck.py:
	  Use enumerate() for looping.
	  Fixed a few nested double-loopings both with index "i".

2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/__init__.py:
	* lib/gaupol/gtk/delegates/__init__.py:
	* lib/gaupol/test/__init__.py:
	  Use dir() instead of inspect.getmembers().

2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/edit.py:
	* lib/gaupol/base/util/listlib.py:
	  Use built-in sorted function.

	* lib/gaupol/gtk/application.py:
	  Fixed testing.

	* lib/gaupol/gtk/dialogs/language.py:
	* lib/gaupol/gtk/dialogs/preferences.py:
	  Commented testing out for now.

2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol:
	  Indented testing output.
	  (parse_options): Added description for parser.

	* lib/gaupol/gtk/dialogs/about.py: