@@ -1,3 +1,9 @@
+2006-01-29  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* lib/gaupol/gtk/delegates/help.py:
+	* lib/gaupol/gtk/dialogs/spellcheck.py:
+	  Added testing.
+
 2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* setup.py:
